# python-crud

./: .gitignore  NOTES.md  pyproject.toml
1_sqlmodel/exemple/: __main__.py
2_sqlalchemy/: pyproject.toml
2_sqlalchemy/data/: create_suppliers_and_products.py  create_user.py  database.py  list_suppliers_and_products.py  list_users.py  tables.py
3_fastapi/: pyproject.toml
3_fastapi/requests_with_pydantic/: exemple.py
3_fastapi/src/: __main__.py  db.py  models.py  schemas.py
3_requests/only_requests/: exemple.py
3_requests/src/: controller.py
4_fastapi/: Dockerfile  pyproject.toml
4_fastapi/src/: database.py  main.py  models.py  schemas.py
5_streamlit/: docker-compose.yml  pyproject.toml
5_streamlit/backend/: Dockerfile  __main__.py  controller.py  database.py  models.py  requirements.txt  router.py  schemas.py
5_streamlit/frontend/: Dockerfile  app.py
sqlmodel_exemple/: database.db
